--- a/codigoApp/src/main/java/com/univalle/laboratoriointerfaces2023/presentation/MyGui.form
+++ b/codigoApp/src/main/java/com/univalle/laboratoriointerfaces2023/presentation/MyGui.form
@@ -211,7 +211,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="tiempoMuestreo">
           <Properties>
-            <Property name="text" type="java.lang.String" value="0.1"/>
+            <Property name="text" type="java.lang.String" value="100"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
           <Events>
@@ -307,7 +307,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
-            <Property name="text" type="java.lang.String" value="s"/>
+            <Property name="text" type="java.lang.String" value="ms"/>
           </Properties>
         </Component>
       </SubComponents>
