--- a/GUI/src/main/java/com/univalle/guiInterfacesLab2023/view/MainView.form
+++ b/GUI/src/main/java/com/univalle/guiInterfacesLab2023/view/MainView.form
@@ -34,7 +34,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="linePanel" max="32767" attributes="0"/>
+              <Component id="lineChartPanel" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -45,7 +45,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Component id="jPanel1" max="32767" attributes="0"/>
-                  <Component id="linePanel" max="32767" attributes="0"/>
+                  <Component id="lineChartPanel" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -284,7 +284,7 @@
         </Component>
       </SubComponents>
     </Container>
-    <Container class="javax.swing.JPanel" name="linePanel">
+    <Container class="javax.swing.JPanel" name="lineChartPanel">
 
       <Layout>
         <DimensionLayout dim="0">
