--- a/GUI/src/main/java/com/univalle/guiInterfacesLab2023/view/MainView.form
+++ b/GUI/src/main/java/com/univalle/guiInterfacesLab2023/view/MainView.form
@@ -163,7 +163,7 @@
                       <Component id="DO2" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                       <Component id="DO3" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="39" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -180,6 +180,9 @@
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="comboSignalDActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
@@ -197,6 +200,9 @@
                 <StringItem index="6" value="A6"/>
                 <StringItem index="7" value="A7"/>
               </StringArray>
+            </Property>
+            <Property name="selectedItem" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection component="comboSignalA" type="bean"/>
             </Property>
           </Properties>
           <AuxValues>
