--- a/web-app/public/styles/stylesView.css
+++ b/web-app/public/styles/stylesView.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     font-family: Arial, sans-serif;
-    background-color: #1a1a1a;
+    background-color: #53b38e;
     margin: 0;
     padding: 0;
 }
